# clawfield

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simple_generate.py
src/clawfield/: __init__.py  builder.py  client.py  skill.py  types.py  utils.py
tests/: test_builder.py  test_client.py  test_skill.py
tests/fixtures/: sample_responses.json
