[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawfield"
version = "0.1.0"
description = "Lightweight sync wrapper for Higgsfield image generation workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Demitrius Spury" },
]
keywords = [
    "agents",
    "agentic-workflows",
    "higgsfield",
    "image-generation",
    "openclaw",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "higgsfield-client",
]

[project.urls]
Homepage = "https://github.com/dspury/clawfield"
Repository = "https://github.com/dspury/clawfield"
Issues = "https://github.com/dspury/clawfield/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clawfield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/examples",
    "/src",
    "/tests",
]
